--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,8 @@
+body {
+    box-sizing: border-box;
+    margin: 0px;
+}
+
 header {
     background: #317798;
     display: flex;
@@ -44,7 +49,8 @@ header {
 
 .descripcionGeneral,
 .seccionCompetencias,
-.seccionEducacion {
+.seccionEducacion,
+.seccionExperienciaLaboral {
     padding: 30px;
 }
 
@@ -53,6 +59,10 @@ header {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+}
+
+h2 {
+    border-bottom: 2px solid black;
 }
 
 .contenedorCompetencias {
