--- a/estilos.css
+++ b/estilos.css
@@ -5,12 +5,48 @@ body {
 }
 
 header {
-    background: #317798;
+    background: rgb(225, 225, 255);
+    background: linear-gradient(90deg, rgba(225, 225, 255, 1) 0%, rgba(64, 158, 177, 1) 100%, rgba(255, 255, 255, 1) 100%);
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+
+.nombreHeader {
+    align-self: center;
+}
+
+div nav {
+    text-align: center;
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+nav a {
+    margin: 5px;
+    margin-bottom: 10px;
+    color: black;
+    border: 1px solid black;
+    text-decoration: none;
+    font-size: 1.1em;
+    border-radius: 14px 14px 0px 0px;
+    padding: 5px;
+    font-weight: 700;
+    transition: .9s;
+}
+
+nav a:hover {
+    background-color: white;
+    text-decoration: underline;
+    color: black
+}
+
+.cabecera {
     display: flex;
     justify-content: space-around;
-    align-items: center;
     flex-wrap: wrap;
-    padding: 10px;
 }
 
 .logoImg {
@@ -31,19 +67,6 @@ header {
     font-style: italic;
 }
 
-.redes {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-content: center;
-    align-items: center;
-}
-
-.redes a {
-    margin-left: 3px;
-    font-size: 28px;
-    color: black;
-}
-
 .redes a:hover {
     color: white;
 }
@@ -56,8 +79,11 @@ header {
 .seccionCompetencias,
 .seccionEducacion,
 .seccionExperienciaLaboral,
-.seccionInformacion {
-    padding: 30px;
+.seccionInformacion,
+.proyectosRealizados,
+.certificados {
+    padding: 10px;
+    margin-top: 40px;
 }
 
 .seccionCompetencias,
@@ -82,7 +108,43 @@ h2 {
 }
 
 .enlaces {
-    color: black
+    color: black;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.contenedorProyectos {
+    margin-top: 40px;
+}
+
+.carousel-item img {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    max-width: 700px;
+    min-width: 250px;
+}
+
+.otrosProyectos {
+    margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+}
+
+.otrosProyectos a {
+    color: black;
+    text-decoration: none;
+    font-size: 23px;
+}
+
+footer {
+    background-color: #245B5B;
+    padding: 5px;
+}
+
+footer div {
+    text-align: center;
+    color: white;
 }
 
 @media screen and (max-width:768px) {
